v2.11.0/_sources/plugins/discovery_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.discovery_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.discovery module -- Resource module for Discovery
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.11.0).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.discovery_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.discovery`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 1.0.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operations create, update and delete of the resource Discovery.
- Initiates discovery with the given parameters. Deprecated since Catalyst Center Release 3.2.1.
- Stops all the discoveries and removes them.
- Stops the discovery for the given Discovery ID and removes it. Deprecated since Catalyst Center Release 3.2.1.
- Stops or starts an existing discovery. Deprecated since Catalyst Center Release 3.2.1.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.discovery_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.2.3.0.0
- python \>= 3.12






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-attributeInfo"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-attributeinfo:

      .. rst-class:: ansible-option-title

      **attributeInfo**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-attributeInfo" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Deprecated.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-catalystcenter_debug:
      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_debug`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-catalystcenter_host:
      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_host`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-catalystcenter_password:
      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_password`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-catalystcenter_api_port:
      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-catalystcenter_port:
      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_port, catalystcenter_api_port`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-catalystcenter_username:
      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-dnac_username:
      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-user:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_username, user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-catalystcenter_verify:
      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_verify`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-catalystcenter_version:
      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_version`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.6.0"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-cdpLevel"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-cdplevel:

      .. rst-class:: ansible-option-title

      **cdpLevel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-cdpLevel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      CDP level to which neighbor devices are to be discovered.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-deviceIds"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-deviceids:

      .. rst-class:: ansible-option-title

      **deviceIds**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-deviceIds" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Ids of the devices discovered in a discovery.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-discoveryCondition"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-discoverycondition:

      .. rst-class:: ansible-option-title

      **discoveryCondition**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-discoveryCondition" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      To indicate the discovery status. Available options Complete or In Progress.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-discoveryStatus"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-discoverystatus:

      .. rst-class:: ansible-option-title

      **discoveryStatus**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-discoveryStatus" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Status of the discovery. Available options are Active, Inactive, Edit.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-discoveryType"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-discoverytype:

      .. rst-class:: ansible-option-title

      **discoveryType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-discoveryType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Type of the discovery. 'Single', 'Range', 'Multi Range', 'CDP', 'LLDP', 'CIDR'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-enablePasswordList"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-enablepasswordlist:

      .. rst-class:: ansible-option-title

      **enablePasswordList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-enablePasswordList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Enable Password of the devices to be discovered.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-globalCredentialIdList"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-globalcredentialidlist:

      .. rst-class:: ansible-option-title

      **globalCredentialIdList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-globalCredentialIdList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Global Credential Ids to be used for discovery.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpReadCredential"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpreadcredential:

      .. rst-class:: ansible-option-title

      **httpReadCredential**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpReadCredential" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      HTTP Read Credential of the devices to be discovered.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpReadCredential/password"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpreadcredential/password:

      .. rst-class:: ansible-option-title

      **password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpReadCredential/password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      HTTP(S) password.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpReadCredential/port"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpreadcredential/port:

      .. rst-class:: ansible-option-title

      **port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpReadCredential/port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      HTTP(S) port.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpReadCredential/secure"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpreadcredential/secure:

      .. rst-class:: ansible-option-title

      **secure**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpReadCredential/secure" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Flag for HTTPS.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpReadCredential/username"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpreadcredential/username:

      .. rst-class:: ansible-option-title

      **username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpReadCredential/username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      HTTP(S) username.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpWriteCredential"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpwritecredential:

      .. rst-class:: ansible-option-title

      **httpWriteCredential**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpWriteCredential" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      HTTP Write Credential of the devices to be discovered.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpWriteCredential/password"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpwritecredential/password:

      .. rst-class:: ansible-option-title

      **password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpWriteCredential/password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      HTTP(S) password.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpWriteCredential/port"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpwritecredential/port:

      .. rst-class:: ansible-option-title

      **port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpWriteCredential/port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      HTTP(S) port.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpWriteCredential/secure"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpwritecredential/secure:

      .. rst-class:: ansible-option-title

      **secure**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpWriteCredential/secure" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Flag for HTTPS.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-httpWriteCredential/username"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-httpwritecredential/username:

      .. rst-class:: ansible-option-title

      **username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-httpWriteCredential/username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      HTTP(S) username.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Unique Discovery Id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ipAddressList"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-ipaddresslist:

      .. rst-class:: ansible-option-title

      **ipAddressList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ipAddressList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      IP Address of devices to be discovered. Ex '172.30.0.1' for SINGLE, CDP and LLDP; '72.30.0.1-172.30.0.4' for RANGE; '72.30.0.1-172.30.0.4,172.31.0.1-172.31.0.4' for MULTI RANGE; '172.30.0.1/20' for CIDR.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ipFilterList"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-ipfilterlist:

      .. rst-class:: ansible-option-title

      **ipFilterList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ipFilterList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      IP Addresses of the devices to be filtered out during discovery.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-isAutoCdp"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-isautocdp:

      .. rst-class:: ansible-option-title

      **isAutoCdp**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-isAutoCdp" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to mention if CDP discovery or not.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-lldpLevel"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-lldplevel:

      .. rst-class:: ansible-option-title

      **lldpLevel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-lldpLevel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      LLDP level to which neighbor devices to be discovered.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-name"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Name of the discovery.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-netconfPort"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-netconfport:

      .. rst-class:: ansible-option-title

      **netconfPort**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-netconfPort" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Netconf Port. It will need valid SSH credentials to work.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-numDevices"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-numdevices:

      .. rst-class:: ansible-option-title

      **numDevices**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-numDevices" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Number of devices discovered in the discovery.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-parentDiscoveryId"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-parentdiscoveryid:

      .. rst-class:: ansible-option-title

      **parentDiscoveryId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-parentDiscoveryId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Parent Discovery Id from which the discovery was initiated.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-passwordList"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-passwordlist:

      .. rst-class:: ansible-option-title

      **passwordList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-passwordList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Password of the devices to be discovered.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-preferredMgmtIPMethod"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-preferredmgmtipmethod:

      .. rst-class:: ansible-option-title

      **preferredMgmtIPMethod**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-preferredMgmtIPMethod" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Preferred Management IP Method.'None' or 'UseLoopBack'. Default is 'None'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-protocolOrder"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-protocolorder:

      .. rst-class:: ansible-option-title

      **protocolOrder**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-protocolOrder" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Order of protocol (ssh/telnet) in which device connection will be tried. Ex 'telnet' only telnet; 'ssh,telnet' ssh with higher order than telnet.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-retry"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-retry:

      .. rst-class:: ansible-option-title

      **retry**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-retry" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Number of times to try establishing connection to device.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-retryCount"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-retrycount:

      .. rst-class:: ansible-option-title

      **retryCount**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-retryCount" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Number of times to try establishing connection to device.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpAuthPassphrase"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmpauthpassphrase:

      .. rst-class:: ansible-option-title

      **snmpAuthPassphrase**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpAuthPassphrase" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Auth passphrase for SNMP.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpAuthProtocol"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmpauthprotocol:

      .. rst-class:: ansible-option-title

      **snmpAuthProtocol**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpAuthProtocol" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SNMP auth protocol. SHA' or 'MD5'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpMode"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmpmode:

      .. rst-class:: ansible-option-title

      **snmpMode**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpMode" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Mode of SNMP. 'AUTHPRIV' or 'AUTHNOPRIV' or 'NOAUTHNOPRIV'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpPrivPassphrase"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmpprivpassphrase:

      .. rst-class:: ansible-option-title

      **snmpPrivPassphrase**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpPrivPassphrase" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Pass phrase for SNMP privacy.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpPrivProtocol"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmpprivprotocol:

      .. rst-class:: ansible-option-title

      **snmpPrivProtocol**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpPrivProtocol" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SNMP privacy protocol. 'AES128'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpROCommunity"></div>
        <div class="ansibleOptionAnchor" id="parameter-snmpRoCommunity"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmprocommunity:

      .. rst-class:: ansible-option-title

      **snmpROCommunity**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpROCommunity" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: snmpRoCommunity`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SNMP RO community of the devices to be discovered. Catalyst Center's create/update API and its get-by-id response use different casing for this same field (snmpROCommunity vs snmpRoCommunity); snmpRoCommunity is kept as an alias so either spelling works.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpROCommunityDesc"></div>
        <div class="ansibleOptionAnchor" id="parameter-snmpRoCommunityDesc"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmprocommunitydesc:

      .. rst-class:: ansible-option-title

      **snmpROCommunityDesc**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpROCommunityDesc" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: snmpRoCommunityDesc`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Description for SNMP RO community.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpRWCommunity"></div>
        <div class="ansibleOptionAnchor" id="parameter-snmpRwCommunity"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmprwcommunity:

      .. rst-class:: ansible-option-title

      **snmpRWCommunity**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpRWCommunity" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: snmpRwCommunity`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SNMP RW community of the devices to be discovered. Catalyst Center's create/update API and its get-by-id response use different casing for this same field (snmpRWCommunity vs snmpRwCommunity); snmpRwCommunity is kept as an alias so either spelling works.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpRWCommunityDesc"></div>
        <div class="ansibleOptionAnchor" id="parameter-snmpRwCommunityDesc"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmprwcommunitydesc:

      .. rst-class:: ansible-option-title

      **snmpRWCommunityDesc**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpRWCommunityDesc" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: snmpRwCommunityDesc`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Description for SNMP RW community.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpUserName"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmpusername:

      .. rst-class:: ansible-option-title

      **snmpUserName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpUserName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SNMP username of the device.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-snmpVersion"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-snmpversion:

      .. rst-class:: ansible-option-title

      **snmpVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-snmpVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Version of SNMP. V2 or v3.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-timeout"></div>
        <div class="ansibleOptionAnchor" id="parameter-timeOut"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-timeout:

      .. rst-class:: ansible-option-title

      **timeout**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-timeout" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: timeOut`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Time to wait for device response in seconds. Catalyst Center's create/update API and its get-by-id response use different casing for this same field (timeout vs timeOut); timeOut is kept as an alias so either spelling works.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-updateMgmtIp"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-updatemgmtip:

      .. rst-class:: ansible-option-title

      **updateMgmtIp**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-updateMgmtIp" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Updates Management IP if multiple IPs are available for a device. If set to true, when a device is rediscovered with a different IP, the management IP is updated. Default value is false.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-userNameList"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-usernamelist:

      .. rst-class:: ansible-option-title

      **userNameList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-userNameList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Username of the devices to be discovered.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are discovery.Discovery.delete\_discovery\_by\_id, discovery.Discovery.start\_discovery, discovery.Discovery.updates\_discovery\_by\_id,
   - Paths used are post /dna/intent/api/v1/discovery, delete /dna/intent/api/v1/discovery, delete /dna/intent/api/v1/discovery/{id}, put /dna/intent/api/v1/discovery,
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK
   - Requires Python \>= 3.10, matching the controller Python versions supported by the collection's minimum ansible-core version (see the collection README for the current ansible-core / Python compatibility range)

.. Seealso

See Also
--------

.. seealso::

   `Cisco Catalyst Center documentation for Discovery StartDiscovery <https://developer.cisco.com/docs/dna-center/#!start-discovery>`_
       Complete reference of the StartDiscovery API.
   `Cisco Catalyst Center documentation for Discovery DeleteAllDiscovery <https://developer.cisco.com/docs/dna-center/#!delete-all-discovery>`_
       Complete reference of the DeleteAllDiscovery API.
   `Cisco Catalyst Center documentation for Discovery DeleteDiscoveryById <https://developer.cisco.com/docs/dna-center/#!delete-discovery-by-id>`_
       Complete reference of the DeleteDiscoveryById API.
   `Cisco Catalyst Center documentation for Discovery UpdatesAnExistingDiscoveryBySpecifiedId <https://developer.cisco.com/docs/dna-center/#!updates-an-existing-discovery-by-specified-id>`_
       Complete reference of the UpdatesAnExistingDiscoveryBySpecifiedId API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Delete all
      cisco.catalystcenter.discovery:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        state: absent
    - name: Create
      cisco.catalystcenter.discovery:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        state: present
        cdpLevel: 0
        discoveryType: string
        enablePasswordList:
          - string
        globalCredentialIdList:
          - string
        httpReadCredential:
          password: string
          port: 0
          secure: true
          username: string
        httpWriteCredential:
          password: string
          port: 0
          secure: true
          username: string
        ipAddressList: string
        ipFilterList:
          - string
        lldpLevel: 0
        name: string
        netconfPort: string
        passwordList:
          - string
        preferredMgmtIPMethod: string
        protocolOrder: string
        retry: 0
        snmpAuthPassphrase: string
        snmpAuthProtocol: string
        snmpMode: string
        snmpPrivPassphrase: string
        snmpPrivProtocol: string
        snmpROCommunity: string
        snmpROCommunityDesc: string
        snmpRWCommunity: string
        snmpRWCommunityDesc: string
        snmpUserName: string
        snmpVersion: string
        timeout: 0
        userNameList:
          - string
    - name: Update all
      cisco.catalystcenter.discovery:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        state: present
        attributeInfo: {}
        cdpLevel: 0
        deviceIds: string
        discoveryCondition: string
        discoveryStatus: string
        discoveryType: string
        enablePasswordList: string
        globalCredentialIdList:
          - string
        httpReadCredential:
          comments: string
          credentialType: string
          description: string
          id: string
          instanceTenantId: string
          instanceUuid: string
          password: string
          port: 0
          secure: true
          username: string
        httpWriteCredential:
          comments: string
          credentialType: string
          description: string
          id: string
          instanceTenantId: string
          instanceUuid: string
          password: string
          port: 0
          secure: true
          username: string
        id: string
        ipAddressList: string
        ipFilterList: string
        isAutoCdp: true
        lldpLevel: 0
        name: string
        netconfPort: string
        numDevices: 0
        parentDiscoveryId: string
        passwordList: string
        preferredMgmtIPMethod: string
        protocolOrder: string
        retryCount: 0
        snmpAuthPassphrase: string
        snmpAuthProtocol: string
        snmpMode: string
        snmpPrivPassphrase: string
        snmpPrivProtocol: string
        snmpRoCommunity: string
        snmpRoCommunityDesc: string
        snmpRwCommunity: string
        snmpRwCommunityDesc: string
        snmpUserName: string
        timeOut: 0
        updateMgmtIp: true
        userNameList: string
    - name: Delete by id
      cisco.catalystcenter.discovery:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        state: absent
        id: string




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-catalystcenter_response"></div>

      .. _ansible_collections.cisco.catalystcenter.discovery_module__return-catalystcenter_response:

      .. rst-class:: ansible-option-title

      **catalystcenter_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-catalystcenter_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"taskId": "string", "url": "string"}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Bryan Vargas (@bvargasre)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

